# PCEA

./: .gitignore  .zenodo.json  CLAUDE.md  README.md  edcmbone.md  pyproject.toml
.github/workflows/: contract-boundary.yml
benchmarks/: bench.py
guardian_state/: __init__.py  aead.py  codec.py  commitment.py  guardian.py  kdf.py  rekey.py  threshold.py  types.py  validate.py  wipe.py  wrap.py
pcea/: __init__.py  cipher.py  codec.py  contract.py  instance.py  kdf.py
pcea-ucns/: PLAN.md  README.md  asymmetric-paths-assessment.md  attack1_minkowski_break.py  attack_harness.py  avenues.md  candidate-ledger.json  factor_count_sweep.py  feasibility-investigation.md  gonal_architecture.py  one_way_map_gate.py  option_d_ucns_map.py  option_family_specs.py  positional_attack.py  prefix_read_break.py  projection_action_candidate.py  pruning_scaling.py  quotient_attack.py  three_factor_attack.py  ucns-crypto-domain-v0.md
tests/: __init__.py  test_aead.py  test_attack1_minkowski_break.py  test_attack_harness.py  test_cipher.py  test_codec.py  test_contract_spec.py  test_factor_count_sweep.py  test_gonal_architecture.py  test_guardian.py  test_instance.py  test_kdf.py  test_metadata_headers.py  test_one_way_map_gate.py  test_option_d_ucns_map.py  test_option_family_specs.py  test_positional_attack.py  test_prefix_read_break.py  test_primes.py  test_projection_action_candidate.py  test_pruning_scaling.py  test_quotient_attack.py  test_three_factor_attack.py  test_threshold.py  test_types.py  test_ucns_candidate_ledger.py  test_validate.py  test_wrap.py
