[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-state"
version = "0.1.0"
description = "Guardian cryptographic state library for a0 and related runtimes"
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://interdependentway.org"
Repository = "https://github.com/The-Interdependency/pcea"

[tool.setuptools.packages.find]
where = ["."]
include = ["guardian_state*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
