[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcea"
version = "0.1.0"
description = "Prime Circular Encryption Algorithm — neural architecture state encryption"
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" },
]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://interdependentway.org"
Repository = "https://github.com/The-Interdependency/PCEA"

[tool.setuptools.packages.find]
where = ["."]
include = ["pcea*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
